Fix text decoration on safari/ipad
[#166003037]

--- a/src/views/collection/DiscoverCollectionsView.less
+++ b/src/views/collection/DiscoverCollectionsView.less
@@ -53,7 +53,9 @@
     }
 
     &subject-link {
-      display: block;
+      display: inline-block;
+
+      vertical-align: middle;
 
       width: 100%;
       margin-bottom: 12px;
@@ -71,6 +73,10 @@
 
     &subject-list-item {
       list-style-type: none;
+
+      div {
+        padding: 0 6px;
+      }
     }
   }
 
@@ -94,6 +100,7 @@
     line-height: 22px;
     font-weight: bold;
     text-decoration: none;
+    margin-bottom: 0;
   }
 
   .discover-collections__subjects-list {
